--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="zh_CN" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="https://docs.cypress.io/favicon.svg" />
