refact: code formatting

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh_CN" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="https://docs.cypress.io/favicon.svg" />
+    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Why Cypress? | Cypress Documentation </title>
+    <title>Why Cypress? | Cypress Documentation</title>
   </head>
   <body class="h-full">
     <div id="app" class="h-full"></div>
